translations-methods/lab4/gen/antlr/GeneratorParser.java
// Generated from ..\..\src\main\java\antlr\Generator.g4 by ANTLR 4.9

package antlr;

import generator.Grammar;
import generator.domain.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GeneratorParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, WS=20, NAME=21, REGEX=22, CODE_TEXT=23;
	public static final int
		RULE_start = 0, RULE_program = 1, RULE_header = 2, RULE_imports = 3, RULE_import_line = 4, 
		RULE_import_name = 5, RULE_tokens = 6, RULE_token_line = 7, RULE_startState = 8, 
		RULE_skip_attr = 9, RULE_states = 10, RULE_state_line = 11, RULE_parameters_state = 12, 
		RULE_returns_state = 13, RULE_rule_line = 14, RULE_parameters_rule = 15, 
		RULE_code_block = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "program", "header", "imports", "import_line", "import_name", 
			"tokens", "token_line", "startState", "skip_attr", "states", "state_line", 
			"parameters_state", "returns_state", "rule_line", "parameters_rule", 
			"code_block"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'grammar'", "';'", "'@imp'", "'{'", "'}'", "'import'", "'.'", 
			"'@tokens'", "':'", "'@start'", "'='", "'->'", "'skip'", "'@states'", 
			"'['", "']'", "'returns'", "'|'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "WS", "NAME", "REGEX", 
			"CODE_TEXT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Generator.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GeneratorParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public Grammar g;
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GeneratorParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);

		    ((StartContext)_localctx).g =  new Grammar();

		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			program(_localctx.g);
			setState(35);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public Grammar g;
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public ImportsContext imports() {
			return getRuleContext(ImportsContext.class,0);
		}
		public TokensContext tokens() {
			return getRuleContext(TokensContext.class,0);
		}
		public StartStateContext startState() {
			return getRuleContext(StartStateContext.class,0);
		}
		public StatesContext states() {
			return getRuleContext(StatesContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ProgramContext(ParserRuleContext parent, int invokingState, Grammar g) {
			super(parent, invokingState);
			this.g = g;
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program(Grammar g) throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState(), g);
		enterRule(_localctx, 2, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			header(_localctx.g);
			setState(38);
			imports(_localctx.g);
			setState(39);
			tokens(_localctx.g);
			setState(40);
			startState(_localctx.g);
			setState(41);
			states(_localctx.g);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public Grammar g;
		public Token NAME;
		public TerminalNode NAME() { return getToken(GeneratorParser.NAME, 0); }
		public HeaderContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public HeaderContext(ParserRuleContext parent, int invokingState, Grammar g) {
			super(parent, invokingState);
			this.g = g;
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).exitHeader(this);
		}
	}

	public final HeaderContext header(Grammar g) throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState(), g);
		enterRule(_localctx, 4, RULE_header);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			match(T__0);
			setState(44);
			((HeaderContext)_localctx).NAME = match(NAME);
			setState(45);
			match(T__1);

			    _localctx.g.setName((((HeaderContext)_localctx).NAME!=null?((HeaderContext)_localctx).NAME.getText():null));

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportsContext extends ParserRuleContext {
		public Grammar g;
		public List<Import_lineContext> import_line() {
			return getRuleContexts(Import_lineContext.class);
		}
		public Import_lineContext import_line(int i) {
			return getRuleContext(Import_lineContext.class,i);
		}
		public ImportsContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ImportsContext(ParserRuleContext parent, int invokingState, Grammar g) {
			super(parent, invokingState);
			this.g = g;
		}
		@Override public int getRuleIndex() { return RULE_imports; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).enterImports(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).exitImports(this);
		}
	}

	public final ImportsContext imports(Grammar g) throws RecognitionException {
		ImportsContext _localctx = new ImportsContext(_ctx, getState(), g);
		enterRule(_localctx, 6, RULE_imports);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(T__2);
			setState(49);
			match(T__3);
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__5) {
				{
				{
				setState(50);
				import_line(_localctx.g);
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(56);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import_lineContext extends ParserRuleContext {
		public Grammar g;
		public Import_nameContext import_name;
		public Import_nameContext import_name() {
			return getRuleContext(Import_nameContext.class,0);
		}
		public Import_lineContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Import_lineContext(ParserRuleContext parent, int invokingState, Grammar g) {
			super(parent, invokingState);
			this.g = g;
		}
		@Override public int getRuleIndex() { return RULE_import_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).enterImport_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).exitImport_line(this);
		}
	}

	public final Import_lineContext import_line(Grammar g) throws RecognitionException {
		Import_lineContext _localctx = new Import_lineContext(_ctx, getState(), g);
		enterRule(_localctx, 8, RULE_import_line);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(58);
			match(T__5);
			setState(59);
			((Import_lineContext)_localctx).import_name = import_name();
			_localctx.g.addImport(((Import_lineContext)_localctx).import_name.name.toString());
			setState(61);
			match(T__1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import_nameContext extends ParserRuleContext {
		public StringBuilder name;
		public Token n1;
		public Token n2;
		public List<TerminalNode> NAME() { return getTokens(GeneratorParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(GeneratorParser.NAME, i);
		}
		public Import_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).enterImport_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).exitImport_name(this);
		}
	}

	public final Import_nameContext import_name() throws RecognitionException {
		Import_nameContext _localctx = new Import_nameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_import_name);

		((Import_nameContext)_localctx).name =  new StringBuilder();

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			((Import_nameContext)_localctx).n1 = match(NAME);
			_localctx.name.append((((Import_nameContext)_localctx).n1!=null?((Import_nameContext)_localctx).n1.getText():null));
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(65);
				match(T__6);
				setState(66);
				((Import_nameContext)_localctx).n2 = match(NAME);
				_localctx.name.append('.').append((((Import_nameContext)_localctx).n2!=null?((Import_nameContext)_localctx).n2.getText():null));
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TokensContext extends ParserRuleContext {
		public Grammar g;
		public List<Token_lineContext> token_line() {
			return getRuleContexts(Token_lineContext.class);
		}
		public Token_lineContext token_line(int i) {
			return getRuleContext(Token_lineContext.class,i);
		}
		public TokensContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public TokensContext(ParserRuleContext parent, int invokingState, Grammar g) {
			super(parent, invokingState);
			this.g = g;
		}
		@Override public int getRuleIndex() { return RULE_tokens; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).enterTokens(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).exitTokens(this);
		}
	}

	public final TokensContext tokens(Grammar g) throws RecognitionException {
		TokensContext _localctx = new TokensContext(_ctx, getState(), g);
		enterRule(_localctx, 12, RULE_tokens);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(T__7);
			setState(74);
			match(T__3);
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NAME) {
				{
				{
				setState(75);
				token_line(_localctx.g);
				}
				}
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(81);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Token_lineContext extends ParserRuleContext {
		public Grammar g;
		public boolean hasSkip;
		public Token NAME;
		public Token REGEX;
		public TerminalNode NAME() { return getToken(GeneratorParser.NAME, 0); }
		public TerminalNode REGEX() { return getToken(GeneratorParser.REGEX, 0); }
		public Skip_attrContext skip_attr() {
			return getRuleContext(Skip_attrContext.class,0);
		}
		public Token_lineContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Token_lineContext(ParserRuleContext parent, int invokingState, Grammar g) {
			super(parent, invokingState);
			this.g = g;
		}
		@Override public int getRuleIndex() { return RULE_token_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).enterToken_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).exitToken_line(this);
		}
	}

	public final Token_lineContext token_line(Grammar g) throws RecognitionException {
		Token_lineContext _localctx = new Token_lineContext(_ctx, getState(), g);
		enterRule(_localctx, 14, RULE_token_line);

		    ((Token_lineContext)_localctx).hasSkip =  false;

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			((Token_lineContext)_localctx).NAME = match(NAME);
			setState(84);
			match(T__8);
			setState(85);
			((Token_lineContext)_localctx).REGEX = match(REGEX);
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__11) {
				{
				setState(86);
				skip_attr();
				((Token_lineContext)_localctx).hasSkip =  true;
				}
			}

			setState(91);
			match(T__1);

			    if (_localctx.hasSkip) {
			        _localctx.g.addSkipToken((((Token_lineContext)_localctx).NAME!=null?((Token_lineContext)_localctx).NAME.getText():null), (((Token_lineContext)_localctx).REGEX!=null?((Token_lineContext)_localctx).REGEX.getText():null));
			    } else {
			        _localctx.g.addToken((((Token_lineContext)_localctx).NAME!=null?((Token_lineContext)_localctx).NAME.getText():null), (((Token_lineContext)_localctx).REGEX!=null?((Token_lineContext)_localctx).REGEX.getText():null));
			    }

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartStateContext extends ParserRuleContext {
		public Grammar g;
		public Token NAME;
		public TerminalNode NAME() { return getToken(GeneratorParser.NAME, 0); }
		public StartStateContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public StartStateContext(ParserRuleContext parent, int invokingState, Grammar g) {
			super(parent, invokingState);
			this.g = g;
		}
		@Override public int getRuleIndex() { return RULE_startState; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).enterStartState(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).exitStartState(this);
		}
	}

	public final StartStateContext startState(Grammar g) throws RecognitionException {
		StartStateContext _localctx = new StartStateContext(_ctx, getState(), g);
		enterRule(_localctx, 16, RULE_startState);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(T__9);
			setState(95);
			match(T__10);
			setState(96);
			((StartStateContext)_localctx).NAME = match(NAME);
			setState(97);
			match(T__1);

			    _localctx.g.setStartState((((StartStateContext)_localctx).NAME!=null?((StartStateContext)_localctx).NAME.getText():null));

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Skip_attrContext extends ParserRuleContext {
		public Skip_attrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_skip_attr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).enterSkip_attr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).exitSkip_attr(this);
		}
	}

	public final Skip_attrContext skip_attr() throws RecognitionException {
		Skip_attrContext _localctx = new Skip_attrContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_skip_attr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(T__11);
			setState(101);
			match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatesContext extends ParserRuleContext {
		public Grammar g;
		public State_lineContext state_line;
		public List<State_lineContext> state_line() {
			return getRuleContexts(State_lineContext.class);
		}
		public State_lineContext state_line(int i) {
			return getRuleContext(State_lineContext.class,i);
		}
		public StatesContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public StatesContext(ParserRuleContext parent, int invokingState, Grammar g) {
			super(parent, invokingState);
			this.g = g;
		}
		@Override public int getRuleIndex() { return RULE_states; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).enterStates(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).exitStates(this);
		}
	}

	public final StatesContext states(Grammar g) throws RecognitionException {
		StatesContext _localctx = new StatesContext(_ctx, getState(), g);
		enterRule(_localctx, 20, RULE_states);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(T__13);
			setState(104);
			match(T__3);
			setState(108); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(105);
				((StatesContext)_localctx).state_line = state_line();
				_localctx.g.addState(((StatesContext)_localctx).state_line.state);
				}
				}
				setState(110); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NAME );
			setState(112);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class State_lineContext extends ParserRuleContext {
		public State state;
		public Token NAME;
		public Rule_lineContext r1;
		public Rule_lineContext r2;
		public TerminalNode NAME() { return getToken(GeneratorParser.NAME, 0); }
		public List<Rule_lineContext> rule_line() {
			return getRuleContexts(Rule_lineContext.class);
		}
		public Rule_lineContext rule_line(int i) {
			return getRuleContext(Rule_lineContext.class,i);
		}
		public Parameters_stateContext parameters_state() {
			return getRuleContext(Parameters_stateContext.class,0);
		}
		public Returns_stateContext returns_state() {
			return getRuleContext(Returns_stateContext.class,0);
		}
		public State_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).enterState_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).exitState_line(this);
		}
	}

	public final State_lineContext state_line() throws RecognitionException {
		State_lineContext _localctx = new State_lineContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_state_line);

		    ((State_lineContext)_localctx).state =  new State();

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			((State_lineContext)_localctx).NAME = match(NAME);
			_localctx.state.setName((((State_lineContext)_localctx).NAME!=null?((State_lineContext)_localctx).NAME.getText():null));
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__14) {
				{
				setState(116);
				match(T__14);
				setState(117);
				parameters_state(_localctx.state);
				setState(118);
				match(T__15);
				}
			}

			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(122);
				match(T__16);
				setState(123);
				match(T__14);
				setState(124);
				returns_state(_localctx.state);
				setState(125);
				match(T__15);
				}
			}

			setState(129);
			match(T__8);
			setState(130);
			((State_lineContext)_localctx).r1 = rule_line();
			_localctx.state.addRule(((State_lineContext)_localctx).r1.r);
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__17) {
				{
				{
				setState(132);
				match(T__17);
				setState(133);
				((State_lineContext)_localctx).r2 = rule_line();
				_localctx.state.addRule(((State_lineContext)_localctx).r2.r);
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(141);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Parameters_stateContext extends ParserRuleContext {
		public State state;
		public Token type1;
		public Token name1;
		public Token type2;
		public Token name2;
		public List<TerminalNode> NAME() { return getTokens(GeneratorParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(GeneratorParser.NAME, i);
		}
		public Parameters_stateContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Parameters_stateContext(ParserRuleContext parent, int invokingState, State state) {
			super(parent, invokingState);
			this.state = state;
		}
		@Override public int getRuleIndex() { return RULE_parameters_state; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).enterParameters_state(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).exitParameters_state(this);
		}
	}

	public final Parameters_stateContext parameters_state(State state) throws RecognitionException {
		Parameters_stateContext _localctx = new Parameters_stateContext(_ctx, getState(), state);
		enterRule(_localctx, 24, RULE_parameters_state);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			((Parameters_stateContext)_localctx).type1 = match(NAME);
			setState(144);
			((Parameters_stateContext)_localctx).name1 = match(NAME);
			_localctx.state.addParameter((((Parameters_stateContext)_localctx).type1!=null?((Parameters_stateContext)_localctx).type1.getText():null), (((Parameters_stateContext)_localctx).name1!=null?((Parameters_stateContext)_localctx).name1.getText():null));
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__18) {
				{
				{
				setState(146);
				match(T__18);
				setState(147);
				((Parameters_stateContext)_localctx).type2 = match(NAME);
				setState(148);
				((Parameters_stateContext)_localctx).name2 = match(NAME);
				_localctx.state.addParameter((((Parameters_stateContext)_localctx).type2!=null?((Parameters_stateContext)_localctx).type2.getText():null), (((Parameters_stateContext)_localctx).name2!=null?((Parameters_stateContext)_localctx).name2.getText():null));
				}
				}
				setState(154);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Returns_stateContext extends ParserRuleContext {
		public State state;
		public Token type1;
		public Token name1;
		public Token type2;
		public Token name2;
		public List<TerminalNode> NAME() { return getTokens(GeneratorParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(GeneratorParser.NAME, i);
		}
		public Returns_stateContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Returns_stateContext(ParserRuleContext parent, int invokingState, State state) {
			super(parent, invokingState);
			this.state = state;
		}
		@Override public int getRuleIndex() { return RULE_returns_state; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).enterReturns_state(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).exitReturns_state(this);
		}
	}

	public final Returns_stateContext returns_state(State state) throws RecognitionException {
		Returns_stateContext _localctx = new Returns_stateContext(_ctx, getState(), state);
		enterRule(_localctx, 26, RULE_returns_state);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			((Returns_stateContext)_localctx).type1 = match(NAME);
			setState(156);
			((Returns_stateContext)_localctx).name1 = match(NAME);
			_localctx.state.addReturn((((Returns_stateContext)_localctx).type1!=null?((Returns_stateContext)_localctx).type1.getText():null), (((Returns_stateContext)_localctx).name1!=null?((Returns_stateContext)_localctx).name1.getText():null));
			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__18) {
				{
				{
				setState(158);
				match(T__18);
				setState(159);
				((Returns_stateContext)_localctx).type2 = match(NAME);
				setState(160);
				((Returns_stateContext)_localctx).name2 = match(NAME);
				_localctx.state.addReturn((((Returns_stateContext)_localctx).type2!=null?((Returns_stateContext)_localctx).type2.getText():null), (((Returns_stateContext)_localctx).name2!=null?((Returns_stateContext)_localctx).name2.getText():null));
				}
				}
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
